app/styles/results.scss
#results {
  article {
    position: relative;
    display: hidden;
  }
  article h4 {
    background-color: #fff;
    opacity: 0.9;
    filter:alpha(opacity=90);
  }
  article a {
    background-color: #fff;
    opacity: 0.9;
    filter:alpha(opacity=90);
  }
  article span {
    display: block;
    width: 95%;
  }
}
.Left_bias {
  color: lightgrey;
  background-color: blue;
  position: inline;
  vertical-align: middle;
  width: 100%;
}
.Right_bias {
  color: lightgray;
  background-color: red;
  position: inline;
  vertical-align: middle;
  width: 100%;
}
.article div {
  display: inline-flex;
  width: 100%;
  .section {
    display: inline;
  }
}

